infra/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: barber-saas-ingress

spec:
  ingressClassName: traefik

  rules:
    - http:
        paths:
          - path: /api/v1/bookings
            pathType: Prefix
            backend:
              service:
                name: booking-service
                port:
                  number: 8081

          - path: /api/v1/availability
            pathType: Prefix
            backend:
              service:
                name: availability-service
                port:
                  number: 8082
